feat: app header and first list

--- a/src/components/TodoMvc/styles.css
+++ b/src/components/TodoMvc/styles.css
@@ -2,6 +2,10 @@ body {
     background-color: #033f63;
 }
 
+.todoapp {
+    margin: 0;
+}
+
 .todo-list li .edit-item {
     display: none;
     position: absolute;
