complete list translation, filters improved and configurable, fix active list indication

--- a/src/components/TodoMvc/styles.css
+++ b/src/components/TodoMvc/styles.css
@@ -32,7 +32,14 @@ body {
 }
 
 .footer {
-    box-sizing: content-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.filters {
+    position: inherit;
 }
 
 .unarchive {
